uninstall jsc from devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,8 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+	"image": "mcr.microsoft.com/devcontainers/base:jammy",
   "features": {
     "ghcr.io/devcontainers-contrib/features/zig:1": {},
-    "ghcr.io/devcontainers-contrib/features/act:1": {},
-    "ghcr.io/devcontainers-contrib/features/apt-packages:1": {
-      "packages": "javascriptcoregtk-4.0"
-    }
+    "ghcr.io/devcontainers-contrib/features/act:1": {}
   },
 	"customizations": {
 		"vscode": {
